welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:6: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Short)Int
match expected type ?
	x=x %
            ^lastDigit:8: error: missing arguments for method == in class Object;
follow this method with `_' if you want to treat it as a partially applied function
}while(x % == x && y % == y)
           ^