welcome.lessons.welcome.bat.bool1.LastDigit.scala.code
def lastDigit(a:Int, b:Int):Boolean = {
var f:Boolean=false 
var x=a
var y=b
do{
	x=x %
	y=y %
}while(x % == x && y % == y)
if(x==y){
	return true
}else {return false }
}
